编译失败，Vue和vue-template-compiler版本不一致

--- a/admin/package.json
+++ b/admin/package.json
@@ -8,11 +8,12 @@
     "dev": "webpack-dev-server --open",
     "build": "webpack --progress --env.Generative=true"
   },
+  "dependencies": {
+    "vue": "^2.5.2"
+  },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.18",
     "q": "^1.5.1",
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -39,14 +40,16 @@
     "style-loader": "^0.22.0",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^1.1.1",
-    "vue-loader": "^14.2.0",
+    "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
+    "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "vuex": "^3.0.1",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "wangeditor": "^3.1.1"
   },
   "engines": {
     "node": ">= 6.0.0",
@@ -56,8 +59,5 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ],
-  "dependencies": {
-    "wangeditor": "^3.1.1"
-  }
+  ]
 }
