--- a/admin/.babelrc
+++ b/admin/.babelrc
@@ -1,6 +1,9 @@
 {
     "presets": [
-        ["env", { "modules": false }],
+        ["env", { 
+            "modules": false,
+            "useBuiltIns": "entry"
+        }],
         "stage-2"
     ],
     "plugins": ["transform-runtime"],
