--- a/admin/package.json
+++ b/admin/package.json
@@ -1,15 +1,16 @@
 {
   "name": "vue-admin",
   "version": "1.0.0",
-  "description": "vue-cli for lenovo",
-  "author": "Wupeng5 <wupeng5@lenovo.com>",
+  "description": "vue-cli",
+  "author": "wupeng5",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --open",
     "build": "webpack --progress --env.Generative=true"
   },
   "dependencies": {
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "babel-polyfill": "^6.26.0"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.18",
@@ -47,7 +48,7 @@
     "vuex": "^3.0.1",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
+    "webpack-dev-server": "^2.9.0",
     "webpack-merge": "^4.1.0",
     "wangeditor": "^3.1.1"
   },
