--- a/admin/package.json
+++ b/admin/package.json
@@ -13,8 +13,6 @@
     "babel-polyfill": "^6.26.0"
   },
   "devDependencies": {
-    "clean-webpack-plugin": "^0.1.18",
-    "q": "^1.5.1",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -25,6 +23,7 @@
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
+    "clean-webpack-plugin": "^0.1.18",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.0",
@@ -38,19 +37,20 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "q": "^1.5.1",
     "style-loader": "^0.22.0",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^1.1.1",
-    "vue-loader": "^13.3.0",
-    "vue-style-loader": "^3.0.1",
+    "vue-loader": "^14.2.4",
     "vue-router": "^3.0.1",
+    "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "vuex": "^3.0.1",
+    "wangeditor": "^3.1.1",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.0",
-    "webpack-merge": "^4.1.0",
-    "wangeditor": "^3.1.1"
+    "webpack-merge": "^4.1.0"
   },
   "engines": {
     "node": ">= 6.0.0",
