webpack 3 切换 webpack4

--- a/Core_UI_Lib/.babelrc
+++ b/Core_UI_Lib/.babelrc
@@ -1,9 +1,9 @@
 {
     "presets": [
-        ["env", { "modules": false }],
+        ["env",{"modules": false}],
         "stage-2"
     ],
-    "plugins": ["transform-runtime"],
+    "plugins": ["transform-runtime","syntax-dynamic-import"],
     "comments": false,
     "env": {
         "test": {
