--- a/Core_UI_Lib/package.json
+++ b/Core_UI_Lib/package.json
@@ -1,62 +1,60 @@
 {
-    "name": "vue-admin",
-    "version": "1.0.0",
-    "description": "vue-cli for lenovo",
-    "author": "Wupeng5 <wupeng5@lenovo.com>",
-    "private": true,
-    "scripts": {
-      "build": "webpack --progress --env.Generative=true"
-    },
-    "devDependencies": {
-      "clean-webpack-plugin": "^0.1.18",
-      "q": "^1.5.1",
-      "vue": "^2.5.2",
-      "vue-router": "^3.0.1",
-      "autoprefixer": "^7.1.2",
-      "babel-core": "^6.22.1",
-      "babel-helper-vue-jsx-merge-props": "^2.0.3",
-      "babel-loader": "^7.1.1",
-      "babel-plugin-syntax-jsx": "^6.18.0",
-      "babel-plugin-transform-object-rest-spread": "^6.26.0",
-      "babel-plugin-transform-runtime": "^6.22.0",
-      "babel-plugin-transform-vue-jsx": "^3.5.0",
-      "babel-preset-env": "^1.3.2",
-      "babel-preset-stage-2": "^6.22.0",
-      "copy-webpack-plugin": "^4.0.1",
-      "cross-env": "^5.1.3",
-      "css-loader": "^0.28.0",
-      "extract-text-webpack-plugin": "^3.0.0",
-      "file-loader": "^1.1.4",
-      "friendly-errors-webpack-plugin": "^1.6.1",
-      "html-loader": "^0.5.5",
-      "html-webpack-plugin": "^2.30.1",
-      "jquery": "^3.3.1",
-      "optimize-css-assets-webpack-plugin": "^3.2.0",
-      "postcss-import": "^11.0.0",
-      "postcss-loader": "^2.0.8",
-      "postcss-url": "^7.2.1",
-      "style-loader": "^0.22.0",
-      "uglifyjs-webpack-plugin": "^1.1.1",
-      "url-loader": "^1.1.1",
-      "vue-loader": "^14.2.0",
-      "vue-style-loader": "^3.0.1",
-      "vue-template-compiler": "^2.5.2",
-      "vuex": "^3.0.1",
-      "webpack": "^3.6.0",
-      "webpack-bundle-analyzer": "^2.9.0",
-      "webpack-dev-server": "^2.9.1",
-      "webpack-merge": "^4.1.0"
-    },
-    "engines": {
-      "node": ">= 6.0.0",
-      "npm": ">= 3.0.0"
-    },
-    "browserslist": [
-      "> 1%",
-      "last 2 versions",
-      "not ie <= 8"
-    ],
-    "dependencies": {
-      "wangeditor": "^3.1.1"
-    }
-}  
+  "name": "vue-cli-core-ui-lib",
+  "version": "1.0.0",
+  "description": "vue-cli-core-ui-lib",
+  "author": "wupeng5",
+  "scripts": {
+    "build": "webpack --mode production",
+    "dev": "webpack-dev-server --open --mode development"
+  },
+  "dependencies": {
+    "vue": "^2.5.2",
+    "babel-polyfill": "^6.26.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.22.1",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-plugin-transform-vue-jsx": "^3.5.0",
+    "babel-preset-env": "^1.3.2",
+    "babel-preset-stage-2": "^6.22.0",
+    "clean-webpack-plugin": "^0.1.18",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
+    "friendly-errors-webpack-plugin": "^1.6.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.3.1",
+    "mini-css-extract-plugin": "^0.8.0",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "q": "^1.5.1",
+    "ssi-webpack-plugin": "^1.0.8",
+    "style-loader": "^0.22.0",
+    "url-loader": "^1.1.2",
+    "vue-loader": "^15.7.2",
+    "vue-router": "^3.0.1",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.5.2",
+    "vuex": "^3.0.1",
+    "webpack": "^4.41.2",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0",
+    "webpack-merge": "^4.2.2",
+    "yargs-parser": "^16.1.0"
+  },
+  "engines": {
+    "node": ">= 6.0.0",
+    "npm": ">= 3.0.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
+}
