--- a/Core_UI_Lib/.babelrc
+++ b/Core_UI_Lib/.babelrc
@@ -1,14 +1,9 @@
 {
     "presets": [
-        ["env",{"modules": false}],
-        "stage-2"
+        "@babel/preset-env"
     ],
-    "plugins": ["transform-runtime","syntax-dynamic-import"],
-    "comments": false,
-    "env": {
-        "test": {
-            "presets": ["env", "stage-2"],
-            "plugins": ["istanbul"]
-        }
-    }
+    "plugins": [
+        "@babel/plugin-transform-runtime",
+        "@babel/plugin-syntax-dynamic-import"
+    ]
 }
