--- a/Core_UI_Lib/package.json
+++ b/Core_UI_Lib/package.json
@@ -8,25 +8,20 @@
     "dev": "webpack-dev-server --open --mode development"
   },
   "dependencies": {
-    "vue": "^2.5.2",
-    "babel-polyfill": "^6.26.0"
+    "vue": "^2.5.2"
   },
   "devDependencies": {
-    "babel-core": "^6.22.1",
-    "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-plugin-transform-vue-jsx": "^3.5.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/runtime": "^7.7.2",
+    "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^0.1.18",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
-    "friendly-errors-webpack-plugin": "^1.6.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
@@ -47,14 +42,5 @@
     "webpack-dev-server": "^3.9.0",
     "webpack-merge": "^4.2.2",
     "yargs-parser": "^16.1.0"
-  },
-  "engines": {
-    "node": ">= 6.0.0",
-    "npm": ">= 3.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+  }
 }
