--- a/admin/package.json
+++ b/admin/package.json
@@ -33,6 +33,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.19",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
